Add DisplayName to authResponseHeaders

--- a/docker/ansible/templates/data/common/traefik/rules/middlewares.yml.j2
+++ b/docker/ansible/templates/data/common/traefik/rules/middlewares.yml.j2
@@ -40,6 +40,7 @@ http:
         trustForwardHeader: true
         authResponseHeaders:
           - "X-Forwarded-User"
+          - "X-Forwarded-DisplayName"
     middlewares-docker-proxy-auth:
       basicAuth:
         users:
