Phase out outline as I migrated to Apple Notes

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -50,7 +50,7 @@ include:
   - $DOCKERDIR/data/compose/immich.yml
   - $DOCKERDIR/data/compose/metube.yml
   - $DOCKERDIR/data/compose/open-webui.yml
-  - $DOCKERDIR/data/compose/outline.yml
+  #- $DOCKERDIR/data/compose/outline.yml
   - $DOCKERDIR/data/compose/plex.yml
   - $DOCKERDIR/data/compose/tubesync.yml
 {% endif %}
