--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -64,7 +64,7 @@ local-data: "chat.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "docs.{{ generic__domain_name }} A 192.168.60.7"
+# local-data: "docs.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "dozzle-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "dozzle-mgmt.{{ generic__domain_name }} A 192.168.1.11"
