--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -38,7 +38,7 @@ local-data: "apps-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "auth-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "change-detection.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "cyberchef.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
-local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+#local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -65,11 +65,11 @@ local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
 # local-data: "docs.{{ generic__domain_name }} A 192.168.60.7"
-local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.7"
-local-data: "dozzle-infra.{{ generic__domain_name }} A 192.168.1.15"
-local-data: "dozzle-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.6"
-local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
+# local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.7"
+# local-data: "dozzle-infra.{{ generic__domain_name }} A 192.168.1.15"
+# local-data: "dozzle-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+# local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.6"
+# local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "echo-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "echo-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "echo-mgmt.{{ generic__domain_name }} A 192.168.1.11"
