--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -52,6 +52,7 @@ local-data: "tools.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
 ### Internal
+local-data: "adguard-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "adguard-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "apps.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "auth-apps.{{ generic__domain_name }} A 192.168.60.7"
@@ -92,8 +93,8 @@ local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
 # local-data: "portainer-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 # local-data: "portainer-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "sabnzbd.{{ generic__domain_name }} A 192.168.60.6"
-local-data: "speedtest.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "speedtest.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "traefik-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "traefik-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "traefik-mgmt.{{ generic__domain_name }} A 192.168.1.11"
