--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -108,6 +108,7 @@ TRAEFIK_FORWARD_AUTH_SECRET={{ apps__traefik_forward_auth_secret }}
 {% if 'management' in group_names %}
 ## Unifi
 UNIFI_MONGO_PASS={{ apps__unifi_db_password }}
+UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
 {% endif %}
 
 {% if 'production' in group_names %}
@@ -198,4 +199,19 @@ OUTLINE_AZURE_CLIENT_SECRET={{ apps__outline_azure_client_secret }}
 OUTLINE_AZURE_RESOURCE_APP_ID={{ apps__outline_azure_resource_app_id }}
 ## Plex
 PLEX_CLAIM_TOKEN={{ apps__plex_claim_token }}
+{% endif %}
+
+{% if 'infra' in group_names %}
+## Cloudflare
+CLOUDFLARE_DOMAIN_1_FQDN={{ apps__cloudflare_domain_1_fqdn }}
+CLOUDFLARE_DOMAIN_1_ZONE_ID={{ apps__cloudflare_domain_1_zone_id }}
+CLOUDFLARE_DOMAIN_1_OBFUSCATED_FQDN={{ apps__cloudflare_domain_1_obfuscated_fqdn }}
+
+## Gatus
+GATUS_DB_PASSWORD={{ apps__gatus_db_password }}
+GATUS_MSTEAMS_WEBHOOK_URL={{ apps__gatus_msteams_webhook_url }}
+
+## Unifi
+UNIFI_MONGO_PASS={{ apps__unifi_db_password }}
+UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
 {% endif %}
