--- a/docker/ansible/templates/data/common/traefik/traefik.yml.j2
+++ b/docker/ansible/templates/data/common/traefik/traefik.yml.j2
@@ -19,7 +19,7 @@ entryPoints:
         readTimeout: 600s
         idleTimeout: 600s
         writeTimeout: 600s
-{% if 'management' in group_names %}
+{% if 'infra' in group_names %}
   unifi-guest:
     address: ":8843"
     http:
@@ -73,7 +73,7 @@ certificatesResolvers:
           - "1.0.0.1:53"
         delayBeforeCheck: 90
 
-{% if 'management' in group_names %}
+{% if 'infra' in group_names %}
 serversTransport:
   # TODO: [traefik] Investigate insecureSkipVerify still need to be set to true
   # Required for Unifi to function. Prevents "Internal Server Error"
