--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -52,32 +52,6 @@ CLOUDFLARE_EMAIL={{ apps_cloudflare_email }}
 CLOUDFLARE_API_TOKEN={{ apps__cloudflare_api_token }}
 {% endif %}
 
-{% if 'management' in group_names %}
-## Bitwarden
-BITWARDEN_INSTALLATION_ID={{ apps__bitwarden_installation_id }}
-BITWARDEN_INSTALLATION_KEY={{ apps__bitwarden_installation_key }}
-BITWARDEN_MYSQL_ROOT_PASSWORD={{ apps__bitwarden_mysql_root_password }}
-BITWARDEN_MYSQL_PASSWORD={{ apps__bitwarden_mysql_password }}
-
-## Cloudflare
-CLOUDFLARE_DOMAIN_1_FQDN={{ apps__cloudflare_domain_1_fqdn }}
-CLOUDFLARE_DOMAIN_1_ZONE_ID={{ apps__cloudflare_domain_1_zone_id }}
-CLOUDFLARE_DOMAIN_1_OBFUSCATED_FQDN={{ apps__cloudflare_domain_1_obfuscated_fqdn }}
-
-## Gatus
-GATUS_DB_PASSWORD={{ apps__gatus_db_password }}
-GATUS_MSTEAMS_WEBHOOK_URL={{ apps__gatus_msteams_webhook_url }}
-
-## Vault
-VAULT_ROOT_CA_COMMON_NAME={{ apps__vault_root_ca_common_name }}
-VAULT_INT_CA_COMMON_NAME={{ apps__vault_int_ca_common_name }}
-
-VAULT_ENTRA_ID_CLIENT_ID={{ apps__vault_entra_id_client_id }}
-VAULT_ENTRA_ID_CLIENT_SECRET={{ apps__vault_entra_id_client_secret }}
-VAULT_ENTRA_ID_DEFAULT_ROLE={{ apps__vault_entra_id_default_role }}
-VAULT_ENTRA_ID_ROLE_NAME={{ apps__vault_entra_id_role_name }}
-{% endif %}
-
 {% if 'webservers' in group_names %}
 ## Grafana
 GRAFANA_ADMIN_USER={{ apps__grafana_admin_user }}
@@ -103,12 +77,6 @@ OAUTH2_PROXY_AZURE_EMAIL_DOMAIN={{ apps__oauth2_proxy_azure_email_domain }}
 
 ## Traefik Forward Auth
 TRAEFIK_FORWARD_AUTH_SECRET={{ apps__traefik_forward_auth_secret }}
-{% endif %}
-
-{% if 'management' in group_names %}
-## Unifi
-UNIFI_MONGO_PASS={{ apps__unifi_db_password }}
-UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
 {% endif %}
 
 {% if 'production' in group_names %}
@@ -202,6 +170,12 @@ PLEX_CLAIM_TOKEN={{ apps__plex_claim_token }}
 {% endif %}
 
 {% if 'infra' in group_names %}
+## Bitwarden
+#BITWARDEN_INSTALLATION_ID={{ apps__bitwarden_installation_id }}
+#BITWARDEN_INSTALLATION_KEY={{ apps__bitwarden_installation_key }}
+#BITWARDEN_MYSQL_ROOT_PASSWORD={{ apps__bitwarden_mysql_root_password }}
+#BITWARDEN_MYSQL_PASSWORD={{ apps__bitwarden_mysql_password }}
+
 ## Cloudflare
 CLOUDFLARE_DOMAIN_1_FQDN={{ apps__cloudflare_domain_1_fqdn }}
 CLOUDFLARE_DOMAIN_1_ZONE_ID={{ apps__cloudflare_domain_1_zone_id }}
@@ -214,4 +188,12 @@ GATUS_MSTEAMS_WEBHOOK_URL={{ apps__gatus_msteams_webhook_url }}
 ## Unifi
 UNIFI_MONGO_PASS={{ apps__unifi_db_password }}
 UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
+
+## Vault
+#VAULT_ROOT_CA_COMMON_NAME={{ apps__vault_root_ca_common_name }}
+#VAULT_INT_CA_COMMON_NAME={{ apps__vault_int_ca_common_name }}
+#VAULT_ENTRA_ID_CLIENT_ID={{ apps__vault_entra_id_client_id }}
+#VAULT_ENTRA_ID_CLIENT_SECRET={{ apps__vault_entra_id_client_secret }}
+#VAULT_ENTRA_ID_DEFAULT_ROLE={{ apps__vault_entra_id_default_role }}
+#VAULT_ENTRA_ID_ROLE_NAME={{ apps__vault_entra_id_role_name }}
 {% endif %}
