--- a/docker/ansible/templates/data/common/traefik/rules/middlewares.yml.j2
+++ b/docker/ansible/templates/data/common/traefik/rules/middlewares.yml.j2
@@ -103,3 +103,10 @@ http:
           Origin: "http://127.0.0.1"
           X-Real-IP: "{clientip}"
           X-Forwarded-For: "{clientip}"
+    middlewares-big-file-upload:
+      buffering:
+        maxRequestBodyBytes: 0 # disable limit
+        maxResponseBodyBytes: 0 # disable limit
+        memRequestBodyBytes: 20971520 # 20MB in memory before spilling to disk
+        memResponseBodyBytes: 20971520 # 20MB in memory before spilling to disk
+        retryExpression: "IsNetworkError() && Attempts() < 2"
