Enable backup notifications

--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -41,6 +41,7 @@ NOTIFICATIONS_TEAMS_WEBHOOK_CONTAINRRR={{ notifications__teams_webhook_containrr
 NOTIFICATIONS_EMAIL_FROM={{ notifications__email_from }}
 NOTIFICATIONS_EMAIL_TO={{ notifications__email_to }}
 NOTIFICATIONS_EMAIL_HOST={{ notifications__email_host }}
+NOTIFICATIONS_EMAIL_DOMAIN={{ notifications__email_domain }}
 NOTIFICATIONS_EMAIL_USERNAME={{ notifications__email_username }}
 NOTIFICATIONS_EMAIL_PASSWORD={{ notifications__email_password }}
 NOTIFICATIONS_EMAIL_PORT={{ notifications__email_port }}
