--- a/docker/ansible/templates/compose-modules/homepage.yml.j2
+++ b/docker/ansible/templates/compose-modules/homepage.yml.j2
@@ -1,5 +1,5 @@
 services:
-{% if 'infra' in group_names %}
+#% if 'infra' in group_names %#
   homepage:
     container_name: homepage
     image: ghcr.io/gethomepage/homepage:v1.7.0@sha256:b6ac42c31845ea7c862d71451c16413a6284430d8ff08e16ad791f42718a7c71
@@ -33,7 +33,7 @@ services:
       - "traefik.http.routers.homepage-rtr.rule=Host(`apps.$DOMAINNAME`)"
       - "traefik.http.routers.homepage-rtr.service=homepage"
       - "traefik.http.services.homepage.loadbalancer.server.port=3000"
-{% endif %}
+#% endif %#
 
   homepage-docker-proxy:
     image: lscr.io/linuxserver/socket-proxy:version-3.0.10-r0@sha256:1cb7a03e3bae30463beeaa65db76aa301b66d3070c0b48e945912a3d23cdb29f
@@ -41,9 +41,9 @@ services:
     restart: always
     networks:
       - homepage-backend
-{% if 'apps' in group_names or 'media' in group_names or 'infra' in group_names or 'external' in group_names %}
+#% if 'apps' in group_names or 'media' in group_names or 'infra' in group_names or 'external' in group_names %#
       - homepage-frontend
-{% endif %}
+#% endif %#
     environment:
       - TZ=${TZ}
       - CONTAINERS=1 # Allow access to viewing containers
@@ -62,13 +62,13 @@ services:
       # Traefik
       - "traefik.enable=true"
       - "traefik.docker.network=homepage-frontend"
-{% if 'apps' in group_names or 'media' in group_names or 'infra' in group_names %}
+#% if 'apps' in group_names or 'media' in group_names or 'infra' in group_names %#
       ## Middlewares
       - "traefik.http.routers.homepage-proxy-rtr.middlewares=chain-basic-auth-svlinfra-whitelist@file"
-{% elif 'external' in group_names %}
+#% elif 'external' in group_names %#
       ## Middlewares
       - "traefik.http.routers.homepage-proxy-rtr.middlewares=chain-basic-auth-home-whitelist@file"
-{% endif %}
+#% endif %#
       ## HTTP Services
       - "traefik.http.routers.homepage-proxy-rtr.rule=Host(`homepage-proxy-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME`)"
       - "traefik.http.routers.homepage-proxy-rtr.service=homepage-proxy"
