--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -1,8 +1,8 @@
 include:
-{% if 'dnsservers' in group_names %}
+#% if 'dnsservers' in group_names %#
   - $DOCKERDIR/data/compose/adguard.yml
-{% endif %}
-{% if 'production' in group_names %}
+#% endif %#
+#% if 'production' in group_names %#
   # - $DOCKERDIR/data/compose/code-server.yml
   # - $DOCKERDIR/data/compose/home-assistant.yml
   # - $DOCKERDIR/data/compose/linkding.yml
@@ -12,14 +12,14 @@ include:
   # - $DOCKERDIR/data/compose/photoprism.yml
   # - $DOCKERDIR/data/compose/vikunja.yml
   # - $DOCKERDIR/data/compose/wallabag.yml
-{% endif %}
-{% if 'webservers' in group_names %}
+#% endif %#
+#% if 'webservers' in group_names %#
   - $DOCKERDIR/data/compose/echo-server.yml
   - $DOCKERDIR/data/compose/homepage.yml
   - $DOCKERDIR/data/compose/traefik-forward-auth.yml
   - $DOCKERDIR/data/compose/traefik-proxy.yml
-{% endif %}
-{% if 'webservers' in group_names and 'external' in group_names %}
+#% endif %#
+#% if 'webservers' in group_names and 'external' in group_names %#
   #- $DOCKERDIR/data/compose/beaverhabits.yml
   - $DOCKERDIR/data/compose/cyberchef.yml
   - $DOCKERDIR/data/compose/drawio.yml
@@ -28,14 +28,14 @@ include:
   - $DOCKERDIR/data/compose/hoppscotch.yml
   - $DOCKERDIR/data/compose/it-tools.yml
   - $DOCKERDIR/data/compose/n8n.yml
-{% endif %}
-{% if 'vpnservers' in group_names %}
+#% endif %#
+#% if 'vpnservers' in group_names %#
   - $DOCKERDIR/data/compose/wireguard.yml
-{% endif %}
-{% if 'media' in group_names %}
+#% endif %#
+#% if 'media' in group_names %#
   - $DOCKERDIR/data/compose/sabnzbd.yml
-{% endif %}
-{% if 'apps' in group_names %}
+#% endif %#
+#% if 'apps' in group_names %#
   - $DOCKERDIR/data/compose/immich.yml
   - $DOCKERDIR/data/compose/metube.yml
   - $DOCKERDIR/data/compose/open-webui.yml
@@ -43,12 +43,12 @@ include:
   #- $DOCKERDIR/data/compose/outline.yml
   - $DOCKERDIR/data/compose/plex.yml
   - $DOCKERDIR/data/compose/tubesync.yml
-{% endif %}
-{% if 'infra' in group_names %}
+#% endif %#
+#% if 'infra' in group_names %#
   - $DOCKERDIR/data/compose/cloudflare.yml
   - $DOCKERDIR/data/compose/gatus.yml
   - $DOCKERDIR/data/compose/unifi.yml
-{% endif %}
+#% endif %#
 
 networks:
   default:
