--- a/docker/ansible/templates/etc/systemd/system/docker.service.d/environment.conf.j2
+++ b/docker/ansible/templates/etc/systemd/system/docker.service.d/environment.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
 [Service]
-{% for env in docker__daemon_environment %}
+#% for env in docker__daemon_environment %#
 Environment="{{ env }}"
-{% endfor %}
+#% endfor %#
