Upgrade to Traefik v3 with v2 syntax

--- a/docker/ansible/templates/data/common/traefik/traefik.yml.j2
+++ b/docker/ansible/templates/data/common/traefik/traefik.yml.j2
@@ -1,6 +1,10 @@
 api:
   dashboard: true
 
+core:
+  # TODO: Migrate Traefik from v2 syntax to v3
+  defaultRuleSyntax: v2
+
 global:
   checkNewVersion: false
   sendAnonymousUsage: false
