--- a/docker/ansible/templates/data/common/homepage/docker.yaml.j2
+++ b/docker/ansible/templates/data/common/homepage/docker.yaml.j2
@@ -10,7 +10,7 @@ docker:
   host: homepage-docker-proxy
   port: 2375
 
-#% if 'infra' in group_names %#
+{% if 'infra' in group_names %}
 docker-apps:
   host: homepage-proxy-apps.{{ generic__domain_name }}
   port: 443 # 2375 # Since we run it via proxy, we use port 443
@@ -38,4 +38,4 @@ docker-mgmt:
   protocol: https
   headers:
     Authorization: Basic {{ generic__docker_traefik_htpasswd_entry_b64 }}
-#% endif %#
+{% endif %}
