--- a/docker/ansible/templates/data/common/traefik/traefik.yml.j2
+++ b/docker/ansible/templates/data/common/traefik/traefik.yml.j2
@@ -1,10 +1,6 @@
 api:
   dashboard: true
 
-core:
-  # TODO: Migrate Traefik from v2 syntax to v3
-  defaultRuleSyntax: v2
-
 global:
   checkNewVersion: false
   sendAnonymousUsage: false
@@ -59,7 +55,6 @@ providers:
     # endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
     defaultRule: Host(`{{ '{{' }} index .Labels "com.docker.compose.service"{{ '}}' }}.{{ generic__domain_name }}`)
-    swarmMode: false
   file:
     directory: "/rules"
     watch: true
@@ -75,7 +70,8 @@ certificatesResolvers:
         resolvers:
           - "1.1.1.1:53"
           - "1.0.0.1:53"
-        delayBeforeCheck: 90
+        propagation:
+          delayBeforeCheck: 90
 
 {% if 'infra' in group_names %}
 serversTransport:
