Use different block start and end strings for Ansible to fix linter issues

--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -4,12 +4,12 @@ PGID={{ pgid }}
 TZ={{ tz }}
 DB_ENC_PASSPHRASE={{ generic__database_encryption_passphrase }}
 
-{% if 'external' in group_names %}
+#% if 'external' in group_names %#
 DB_BACKUP_SA_NAME={{ generic__database_backup_storage_account_name }}
 DB_BACKUP_SA_KEY={{ generic__database_backup_storage_account_key }}
 DB_BACKUP_SA_PATH={{ generic__database_backup_storage_account_path }}
 DB_BACKUP_SA_MODE={{ generic__database_backup_storage_account_mode }}
-{% endif %}
+#% endif %#
 
 GENERIC_HOSTNAME_PREFIX={{ generic__hostname_prefix }}
 GENERIC_HOSTNAME_SUFFIX={{ generic__hostname_suffix }}
@@ -52,13 +52,13 @@ NOTIFICATIONS_EMAIL_PORT={{ notifications__email_port }}
 NOTIFICATIONS_EMAIL_SHOUTRRR_URL={{ notifications__email_shoutrrr_url }}
 
 # Apps
-{% if 'webservers' in group_names %}
+#% if 'webservers' in group_names %#
 ## Cloudflare
 CLOUDFLARE_EMAIL={{ apps_cloudflare_email }}
 CLOUDFLARE_API_TOKEN={{ apps__cloudflare_api_token }}
-{% endif %}
+#% endif %#
 
-{% if 'webservers' in group_names %}
+#% if 'webservers' in group_names %#
 ## Grafana
 GRAFANA_ADMIN_USER={{ apps__grafana_admin_user }}
 GRAFANA_ADMIN_PASSWORD={{ apps__grafana_admin_password }}
@@ -83,9 +83,9 @@ OAUTH2_PROXY_AZURE_EMAIL_DOMAIN={{ apps__oauth2_proxy_azure_email_domain }}
 
 ## Traefik Forward Auth
 TRAEFIK_FORWARD_AUTH_SECRET={{ apps__traefik_forward_auth_secret }}
-{% endif %}
+#% endif %#
 
-{% if 'production' in group_names %}
+#% if 'production' in group_names %#
 ## Linkding
 LINKDING_ADMIN_USERNAME={{ apps__linkding_admin_username }}
 LINKDING_ADMIN_PASSWORD={{ apps__linkding_admin_password }}
@@ -126,13 +126,13 @@ WALLABAG_SECRET={{ apps__wallabag_secret }}
 WALLABAG_MYSQL_PASSWORD={{ apps__wallabag_mysql_password }}
 WALLABAG_MYSQL_ROOT_PASSWORD={{ apps__wallabag_mysql_root_password }}
 WALLABAG_REDIS_PASSWORD={{ apps__wallabag_redis_password }}
-{% endif %}
+#% endif %#
 
-{% if 'vpnservers' in group_names %}
+#% if 'vpnservers' in group_names %#
 WIREGUARD_PEERS={{ apps__wireguard_peers }}
-{% endif %}
+#% endif %#
 
-{% if 'external' in group_names %}
+#% if 'external' in group_names %#
 FOLDING_AT_HOME_ACCOUNT_TOKEN={{ apps__folding_at_home_account_token }}
 
 HOPPSCOTCH_JWT_SECRET={{ apps__hoppscotch_jwt_secret }}
@@ -143,9 +143,9 @@ HOPPSCOTCH_GITHUB_CLIENT_ID={{ apps__hoppscotch_github_client_id }}
 HOPPSCOTCH_GITHUB_CLIENT_SECRET={{ apps__hoppscotch_github_client_secret }}
 
 N8N_DB_PASSWORD={{ apps__n8n_db_password }}
-{% endif %}
+#% endif %#
 
-{% if 'apps' in group_names %}
+#% if 'apps' in group_names %#
 ## Immich
 IMMICH_REDIS_PASSWORD={{ apps__immich_redis_password }}
 IMMICH_DB_PASSWORD={{ apps__immich_db_password }}
@@ -168,9 +168,9 @@ OUTLINE_AZURE_CLIENT_SECRET={{ apps__outline_azure_client_secret }}
 OUTLINE_AZURE_RESOURCE_APP_ID={{ apps__outline_azure_resource_app_id }}
 ## Plex
 PLEX_CLAIM_TOKEN={{ apps__plex_claim_token }}
-{% endif %}
+#% endif %#
 
-{% if 'infra' in group_names %}
+#% if 'infra' in group_names %#
 ## Bitwarden
 #BITWARDEN_INSTALLATION_ID={{ apps__bitwarden_installation_id }}
 #BITWARDEN_INSTALLATION_KEY={{ apps__bitwarden_installation_key }}
@@ -197,4 +197,4 @@ UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
 #VAULT_ENTRA_ID_CLIENT_SECRET={{ apps__vault_entra_id_client_secret }}
 #VAULT_ENTRA_ID_DEFAULT_ROLE={{ apps__vault_entra_id_default_role }}
 #VAULT_ENTRA_ID_ROLE_NAME={{ apps__vault_entra_id_role_name }}
-{% endif %}
+#% endif %#
