--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -22,6 +22,7 @@ include:
 #% if 'webservers' in group_names and 'external' in group_names %#
   #- $DOCKERDIR/data/compose/beaverhabits.yml
   - $DOCKERDIR/data/compose/cyberchef.yml
+  - $DOCKERDIR/data/compose/dawarich.yml
   - $DOCKERDIR/data/compose/drawio.yml
   - $DOCKERDIR/data/compose/excalidraw.yml
   - $DOCKERDIR/data/compose/folding-at-home.yml
