--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -37,6 +37,8 @@ local-data: "auth-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "change-detection.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "cyberchef.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 #local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "dawarich.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "dawarich-noauth.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
