--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -133,6 +133,9 @@ WIREGUARD_PEERS={{ apps__wireguard_peers }}
 #% endif %#
 
 #% if 'external' in group_names %#
+DAWARICH_DB_PASSWORD = {{ apps__dawarich_db_password }}
+DAWARICH_SECRET_KEY_BASE = {{ apps__dawarich_secret_key_base }}
+
 FOLDING_AT_HOME_ACCOUNT_TOKEN={{ apps__folding_at_home_account_token }}
 
 HOPPSCOTCH_JWT_SECRET={{ apps__hoppscotch_jwt_secret }}
