Add arr stack + introduce homepage widgets

--- a/docker/ansible/templates/compose-modules/homepage.yml.j2
+++ b/docker/ansible/templates/compose-modules/homepage.yml.j2
@@ -2,7 +2,12 @@ services:
 #% if 'infra' in group_names %#
   homepage:
     container_name: homepage
-    image: ghcr.io/gethomepage/homepage:v1.8.0@sha256:7dc099d5c6ec7fc945d858218565925b01ff8a60bcbfda990fc680a8b5cd0b6e
+    #image: ghcr.io/gethomepage/homepage:v1.8.0@sha256:7dc099d5c6ec7fc945d858218565925b01ff8a60bcbfda990fc680a8b5cd0b6e
+    image: ghcr.io/gethomepage/homepage:dev@sha256:3867223d308f1de6ddff5662b6ea889cbc07c5c4d995e05e58f87889ebd2e12d
+    # build:
+    #   context: https://github.com/devsecninja/homepage.git#copilot/add-custom-headers-authentication
+    #   dockerfile: Dockerfile
+    #   network: host
     depends_on:
       - traefik
       - homepage-docker-proxy
