--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -11,7 +11,7 @@ local-data: "SVLNAS.{{ generic__domain_name }} A 192.168.1.30"
 ## SVLAPPS
 local-data: "SVLAPPS.{{ generic__domain_name }} A 192.168.60.7"
 ## SVLMEDIA
-local-data: "SVLMEDIA.{{ generic__domain_name }} A 192.168.60.6"
+local-data: "SVLMEDIA.{{ generic__domain_name }} A 192.168.70.6"
 ## SVLINFRA
 local-data: "SVLINFRA.{{ generic__domain_name }} A 192.168.1.15"
 ## SVLEXT
@@ -56,8 +56,9 @@ local-data: "adguard-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "apps.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "auth-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "auth-infra.{{ generic__domain_name }} A 192.168.1.15"
-local-data: "auth-media.{{ generic__domain_name }} A 192.168.60.6"
+local-data: "auth-media.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "auth-prod.{{ generic__domain_name }} A 192.168.60.2"
+local-data: "bazarr.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "chat.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
@@ -65,15 +66,16 @@ local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
 # local-data: "docs.{{ generic__domain_name }} A 192.168.60.7"
 # local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.7"
 # local-data: "dozzle-infra.{{ generic__domain_name }} A 192.168.1.15"
-# local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.6"
+# local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.70.6"
 # local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "echo-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "echo-infra.{{ generic__domain_name }} A 192.168.1.15"
-local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.6"
+local-data: "echo-media.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "homepage-proxy-apps.{{ generic__domain_name }} A 192.168.60.7"
-local-data: "homepage-proxy-media.{{ generic__domain_name }} A 192.168.60.6"
+local-data: "homepage-proxy-media.{{ generic__domain_name }} A 192.168.70.6"
+local-data: "lidarr.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "metube.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
@@ -84,16 +86,21 @@ local-data: "photos-noauth.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "plex.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.7"
 # local-data: "portainer-prod.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "sabnzbd.{{ generic__domain_name }} A 192.168.60.6"
+local-data: "prowlarr.{{ generic__domain_name }} A 192.168.70.6"
+local-data: "radarr.{{ generic__domain_name }} A 192.168.70.6"
+local-data: "sabnzbd.{{ generic__domain_name }} A 192.168.70.6"
+local-data: "sonarr.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "speedtest.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "spottarr.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "traefik-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "traefik-infra.{{ generic__domain_name }} A 192.168.1.15"
-local-data: "traefik-media.{{ generic__domain_name }} A 192.168.60.6"
+local-data: "traefik-media.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "traefik-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "tubesync.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "unifi.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "unifi-guest.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "unifi-noauth.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "vault.{{ generic__domain_name }} A 192.168.1.15"
+local-data: "qbittorrent.{{ generic__domain_name }} A 192.168.70.6"
 # local-data: "wallabag.{{ generic__domain_name }} A 192.168.60.2"
