--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -201,3 +201,17 @@ UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
 #VAULT_ENTRA_ID_DEFAULT_ROLE={{ apps__vault_entra_id_default_role }}
 #VAULT_ENTRA_ID_ROLE_NAME={{ apps__vault_entra_id_role_name }}
 #% endif %#
+
+#% if 'media' in group_names %#
+## spottarr
+SPOTTARR_USENET_HOSTNAME={{ apps__spottarr_usenet_hostname }}
+SPOTTARR_USENET_USERNAME={{ apps__spottarr_usenet_username }}
+SPOTTARR_USENET_PASSWORD={{ apps__spottarr_usenet_password }}
+SPOTTARR_USENET_PORT={{ apps__spottarr_usenet_port }}
+SPOTTARR_USENET_USETLS={{ apps__spottarr_usenet_usetls }}
+SPOTTARR_USENET_MAXCONNECTIONS={{ apps__spottarr_usenet_maxconnections }}
+SPOTTARR_SPOTNET_RETRIEVEAFTER={{ apps__spottarr_spotnet_retrieveafter }}
+SPOTTARR_SPOTNET_IMPORTBATCHSIZE={{ apps__spottarr_spotnet_importbatchsize }}
+SPOTTARR_SPOTNET_RETENTIONDAYS={{ apps__spottarr_spotnet_retentiondays }}
+SPOTTARR_SPOTNET_IMPORTADULTCONTENT={{ apps__spottarr_spotnet_importadultcontent }}
+#% endif %#
