--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -16,6 +16,8 @@ local-data: "SVLMEDIA.{{ generic__domain_name }} A 192.168.70.6"
 local-data: "SVLINFRA.{{ generic__domain_name }} A 192.168.1.15"
 ## SVLEXT
 local-data: "SVLEXT.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+## SVLDMZ
+local-data: "SVLDMZ.{{ generic__domain_name }} A {{ generic__ips_svldmz }}"
 
 ## Home
 local-data: "home.{{ generic__domain_name }} A 192.168.50.2"
@@ -40,6 +42,7 @@ local-data: "cyberchef.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "dawarich.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "dawarich-noauth.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "echo-dmz.{{ generic__domain_name }} A {{ generic__ips_svldmz }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "habits.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -49,6 +52,7 @@ local-data: "n8n.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "portainer-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "search.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "tools.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "traefik-dmz.{{ generic__domain_name }} A {{ generic__ips_svldmz }}"
 local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
 ### Internal
