--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -26,6 +26,7 @@ GENERIC_ENTRA_ID_ISSUER_URL={{ generic__entra_id_issuer_url }}
 GENERIC_IPS_SVLEXT={{ generic__ips_svlext }}
 GENERIC_IPS_TRAEFIK={{ generic__ips_traefik }}
 
+# TODO: Use separate monitoring header for untrusted
 GENERIC_MONITORING_HEADER_SECRET={{ generic__monitoring_header_secret }}
 
 # Docker
@@ -38,10 +39,6 @@ DOMAINNAME={{ generic__domain_name }}
 ORGANIZATION_NAME={{ generic__organization_name }}
 
 # Notifications
-NOTIFICATIONS_MAILRISE_SMTP_USERNAME={{ notifications__mailrise_smtp_username }}
-NOTIFICATIONS_MAILRISE_SMTP_PASSWORD={{ notifications__mailrise_smtp_password }}
-NOTIFICATIONS_MAILRISE_SMTP_PORT={{ notifications__mailrise_smtp_port }}
-NOTIFICATIONS_TEAMS_WEBHOOK_CONTAINRRR={{ notifications__teams_webhook_containrrr }}
 NOTIFICATIONS_EMAIL_FROM={{ notifications__email_from }}
 NOTIFICATIONS_EMAIL_TO={{ notifications__email_to }}
 NOTIFICATIONS_EMAIL_HOST={{ notifications__email_host }}
@@ -54,20 +51,16 @@ NOTIFICATIONS_EMAIL_SHOUTRRR_URL={{ notifications__email_shoutrrr_url }}
 # Apps
 #% if 'webservers' in group_names %#
 ## Cloudflare
-CLOUDFLARE_EMAIL={{ apps_cloudflare_email }}
+CLOUDFLARE_EMAIL={{ apps__cloudflare_email }}
 CLOUDFLARE_API_TOKEN={{ apps__cloudflare_api_token }}
 #% endif %#
 
-#% if 'webservers' in group_names %#
-## Grafana
-GRAFANA_ADMIN_USER={{ apps__grafana_admin_user }}
-GRAFANA_ADMIN_PASSWORD={{ apps__grafana_admin_password }}
-
-## InfluxDB
-INFLUXDB_USERNAME={{ apps__influxdb_username }}
-INFLUXDB_PASSWORD={{ apps__influxdb_password }}
-INFLUXDB_ADMIN_TOKEN={{ apps__influxdb_admin_token }}
-INFLUXDB_ORGANIZATION={{ apps__influxdb_organization }}
+#% if 'trusted' in group_names %#
+## Notifications
+NOTIFICATIONS_MAILRISE_SMTP_USERNAME={{ notifications__mailrise_smtp_username }}
+NOTIFICATIONS_MAILRISE_SMTP_PASSWORD={{ notifications__mailrise_smtp_password }}
+NOTIFICATIONS_MAILRISE_SMTP_PORT={{ notifications__mailrise_smtp_port }}
+NOTIFICATIONS_TEAMS_WEBHOOK_CONTAINRRR={{ notifications__teams_webhook_containrrr }}
 
 ## OAuth2 Proxy
 OAUTH2_PROXY_WHITELIST_DOMAINS={{ apps__oauth2_proxy_whitelist_domains }}
@@ -90,6 +83,7 @@ TRAEFIK_FORWARD_AUTH_SECRET={{ apps__traefik_forward_auth_secret }}
 LINKDING_ADMIN_USERNAME={{ apps__linkding_admin_username }}
 LINKDING_ADMIN_PASSWORD={{ apps__linkding_admin_password }}
 LINKDING_DB_PASSWORD={{ apps__linkding_db_password }}
+
 ## Nextcloud
 NEXTCLOUD_MYSQL_ROOT_PASSWORD={{ apps__nextcloud_mysql_root_password }}
 NEXTCLOUD_MYSQL_PASSWORD={{ apps__nextcloud_mysql_password }}
@@ -97,9 +91,11 @@ NEXTCLOUD_ADMIN_USER={{ apps__nextcloud_admin_user }}
 NEXTCLOUD_ADMIN_PASSWORD={{ apps__nextcloud_admin_password }}
 NEXTCLOUD_TRUSTED_DOMAINS={{ apps__nextcloud_trusted_domains }}
 NEXTCLOUD_REDIS_PASSWORD={{ apps__nextcloud_redis_password }}
+
 ## Papermerge
 PAPERMERGE_SECRET_KEY={{ apps__papermerge_secret_key }}
 PAPERMERGE_AUTH_PASSWORD={{ apps__papermerge_auth_password }}
+
 ## Paperless-NGX
 PAPERLESS_ADMIN_USER={{ apps__paperless_admin_user }}
 PAPERLESS_ADMIN_PASSWORD={{ apps__paperless_admin_password }}
@@ -107,9 +103,11 @@ PAPERLESS_ADMIN_EMAIL={{ apps__paperless_admin_email }}
 PAPERLESS_DB_PASSWORD={{ apps__paperless_db_password }}
 PAPERLESS_REDIS_PASSWORD={{ apps__paperless_redis_password }}
 PAPERLESS_SECRET_KEY={{ apps__paperless_secret_key }}
+
 ## Photoprism
 PHOTOPRISM_MYSQL_PASSWORD={{ apps__photoprism_mysql_password }}
 PHOTOPRISM_MYSQL_ROOT_PASSWORD={{ apps__photoprism_mysql_root_password }}
+
 ## Samba
 SAMBA_USERNAME={{ apps__samba_username }}
 SAMBA_PASSWORD={{ apps__samba_password }}
@@ -117,10 +115,12 @@ SAMBA_HOME_ASSISTANT_USERNAME={{ apps__samba_home_assistant_username }}
 SAMBA_HOME_ASSISTANT_PASSWORD={{ apps__samba_home_assistant_password }}
 SAMBA_BACKUP_USERNAME={{ apps__samba_backup_username }}
 SAMBA_BACKUP_PASSWORD={{ apps__samba_backup_password }}
+
 ## Vikunja
 VIKUNJA_MYSQL_PASSWORD={{ apps__vikunja_mysql_password }}
 VIKUNJA_MYSQL_ROOT_PASSWORD={{ apps__vikunja_mysql_root_password }}
 VIKUNJA_JWT_SECRET={{ apps__vikunja_jwt_secret }}
+
 ## Wallabag
 WALLABAG_SECRET={{ apps__wallabag_secret }}
 WALLABAG_MYSQL_PASSWORD={{ apps__wallabag_mysql_password }}
@@ -152,6 +152,7 @@ N8N_DB_PASSWORD={{ apps__n8n_db_password }}
 ## Immich
 IMMICH_REDIS_PASSWORD={{ apps__immich_redis_password }}
 IMMICH_DB_PASSWORD={{ apps__immich_db_password }}
+
 ## Open WebUI
 OPEN_WEBUI_AZURE_API_URLS={{ apps__open_webui_azure_api_urls }}
 OPEN_WEBUI_AZURE_API_KEYS={{ apps__open_webui_azure_api_keys }}
@@ -161,6 +162,7 @@ OPEN_WEBUI_AZURE_API_TAGS={{ apps__open_webui_azure_api_tags }}
 OPEN_WEBUI_AZURE_API_MODEL_IDS={{ apps__open_webui_azure_api_model_ids }}
 OPEN_WEBUI_OLLAMA_BASE_URL={{ apps__open_webui_ollama_base_url }}
 OPEN_WEBUI_SECRET_KEY={{ apps__open_webui_secret_key }}
+
 ## Outline
 OUTLINE_SECRET_KEY={{ apps__outline_secret_key }}
 OUTLINE_UTILS_SECRET={{ apps__outline_utils_secret }}
@@ -200,6 +202,16 @@ UNIFI_MONGO_ROOT_PASS={{ apps__unifi_db_root_password }}
 #VAULT_ENTRA_ID_CLIENT_SECRET={{ apps__vault_entra_id_client_secret }}
 #VAULT_ENTRA_ID_DEFAULT_ROLE={{ apps__vault_entra_id_default_role }}
 #VAULT_ENTRA_ID_ROLE_NAME={{ apps__vault_entra_id_role_name }}
+
+## Grafana
+GRAFANA_ADMIN_USER={{ apps__grafana_admin_user }}
+GRAFANA_ADMIN_PASSWORD={{ apps__grafana_admin_password }}
+
+## InfluxDB
+INFLUXDB_USERNAME={{ apps__influxdb_username }}
+INFLUXDB_PASSWORD={{ apps__influxdb_password }}
+INFLUXDB_ADMIN_TOKEN={{ apps__influxdb_admin_token }}
+INFLUXDB_ORGANIZATION={{ apps__influxdb_organization }}
 #% endif %#
 
 #% if 'media' in group_names %#
