--- a/docker/ansible/templates/compose-modules/echo-server.yml.j2
+++ b/docker/ansible/templates/compose-modules/echo-server.yml.j2
@@ -28,7 +28,11 @@ services:
       ## HTTP Routers
       - "traefik.http.routers.echo-server-rtr.rule=Host(`echo-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME`)"
       ## Middlewares
+#% if 'untrusted' in group_names %#
+      - "traefik.http.routers.echo-server-rtr.middlewares=chain-no-auth@file"
+#% else %#
       - "traefik.http.routers.echo-server-rtr.middlewares=chain-auth@file"
+#% endif %#
       ## HTTP Services
       - "traefik.http.routers.echo-server-rtr.service=echo-server"
       ### Enable the server port
