--- a/docker/ansible/templates/compose-modules/traefik-proxy.yml.j2
+++ b/docker/ansible/templates/compose-modules/traefik-proxy.yml.j2
@@ -66,19 +66,21 @@ services:
       - homepage.widget.headers.X-Monitor-Key=${GENERIC_MONITORING_HEADER_SECRET}
       # Traefik
       - "traefik.enable=true"
+      ## TLS
+      - "traefik.http.routers.traefik-rtr.tls.certresolver=dns-cloudflare"
+      - "traefik.http.routers.traefik-rtr.tls.domains[0].main=$DOMAINNAME"
+      - "traefik.http.routers.traefik-rtr.tls.domains[0].sans=*.$DOMAINNAME"
+#% if 'trusted' in group_names %#
       ## Middlewares
       - "traefik.http.routers.traefik-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.traefik-rtr.rule=Host(`traefik-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME`)"
       - "traefik.http.routers.traefik-rtr.service=api@internal"
-      ## TLS
-      - "traefik.http.routers.traefik-rtr.tls.certresolver=dns-cloudflare"
-      - "traefik.http.routers.traefik-rtr.tls.domains[0].main=$DOMAINNAME"
-      - "traefik.http.routers.traefik-rtr.tls.domains[0].sans=*.$DOMAINNAME"
       ## Router for Gatus — bypass auth if secret header is present
       - "traefik.http.routers.traefik-monitor-rtr.rule=Host(`traefik-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
       - "traefik.http.routers.traefik-monitor-rtr.service=api@internal"
       - "traefik.http.routers.traefik-monitor-rtr.priority=100"  # Higher priority so it matches first
+#% endif %#
     # Saves some CPU cycles + healthcheck doesn't do anything on failure
     # healthcheck:
     #   test: ["CMD-SHELL","traefik healthcheck --ping.entrypoint ping --entryPoints.ping.address=:8267 --ping"]
