--- a/docker/ansible/templates/data/common/traefik/traefik.yml.j2
+++ b/docker/ansible/templates/data/common/traefik/traefik.yml.j2
@@ -1,5 +1,7 @@
+#% if 'trusted' in group_names %#
 api:
   dashboard: true
+#% endif %#
 
 global:
   checkNewVersion: false
@@ -69,7 +71,7 @@ certificatesResolvers:
   dns-cloudflare:
     acme:
       # caServer: "https://acme-staging-v02.api.letsencrypt.org/directory" # LetsEncrypt Staging Server - uncomment when testing
-      email: {{ apps_cloudflare_email }}
+      email: {{ apps__cloudflare_email }}
       storage: "/acme.json"
       dnsChallenge:
         provider: "cloudflare"
