--- a/docker/ansible/templates/compose-modules/traefik-proxy.yml.j2
+++ b/docker/ansible/templates/compose-modules/traefik-proxy.yml.j2
@@ -70,6 +70,10 @@ services:
       - "traefik.http.routers.traefik-rtr.tls.certresolver=dns-cloudflare"
       - "traefik.http.routers.traefik-rtr.tls.domains[0].main=$DOMAINNAME"
       - "traefik.http.routers.traefik-rtr.tls.domains[0].sans=*.$DOMAINNAME"
+#% if 'untrusted' in group_names %#
+      - "traefik.http.routers.traefik-rtr.tls.domains[1].main=hadiscover.com"
+      - "traefik.http.routers.traefik-rtr.tls.domains[1].sans=*.hadiscover.com"
+#% endif %#
 #% if 'trusted' in group_names %#
       ## Middlewares
       - "traefik.http.routers.traefik-rtr.middlewares=chain-auth@file"
