Include token for hadiscover

--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -226,3 +226,7 @@ SPOTTARR_SPOTNET_RETRIEVEAFTER={{ apps__spottarr_spotnet_retrieveafter }}
 SPOTTARR_SPOTNET_IMPORTBATCHSIZE={{ apps__spottarr_spotnet_importbatchsize }}
 SPOTTARR_SPOTNET_RETENTIONDAYS={{ apps__spottarr_spotnet_retentiondays }}
 #% endif %#
+
+#% if 'dmz' in group_names %#
+HADISCOVER_GITHUB_TOKEN={{ apps__hadiscover_github_token }}
+#% endif %#
