--- a/docker/ansible/templates/compose-modules/homepage.yml.j2
+++ b/docker/ansible/templates/compose-modules/homepage.yml.j2
@@ -2,12 +2,7 @@ services:
 #% if 'infra' in group_names %#
   homepage:
     container_name: homepage
-    #image: ghcr.io/gethomepage/homepage:v1.8.0@sha256:7dc099d5c6ec7fc945d858218565925b01ff8a60bcbfda990fc680a8b5cd0b6e
-    image: ghcr.io/gethomepage/homepage:dev@sha256:5330c59a2010e1dfe3d52560f4b2e5847acbad96f16608f85e2d0cf0491c2142
-    # build:
-    #   context: https://github.com/devsecninja/homepage.git#copilot/add-custom-headers-authentication
-    #   dockerfile: Dockerfile
-    #   network: host
+    image: ghcr.io/gethomepage/homepage:v1.9.0@sha256:7fa7b07a26bd8d90a44bb975c6455b10d8dee467ce674b040750ffb4a0f486d6
     depends_on:
       - traefik
       - homepage-docker-proxy
